--- a/RabotaLINQ.csproj
+++ b/RabotaLINQ.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sputnik.cs" />
+    <Compile Include="TestEgais.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Sp.xml" />
+    <Content Include="users.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
